--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -26,7 +26,7 @@
           </ul>
     
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/login"><i class="fa fa-unlock-alt"></i> Log In</a></li>
+            <li><a href="#/login"><i class="fa fa-unlock-alt"></i> Profile</a></li>
           </ul>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <h3>Navigate.</h3>
           <p><a href="#/"><i class="fa fa-home"></i> Home</a><br>
           <a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a><br>
-          <a href="#/login"><i class="fa fa-unlock-alt"></i> Log In</a><br><br></p>
+          <a href="#/login"><i class="fa fa-unlock-alt"></i> Profile</a><br><br></p>
         </div>
         <div class="col-md-3 col-xs-6">
           <h3>Follow.</h3>
