Profile page design finished

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -73,7 +73,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Modules -->
-    <script src="../app/app.js"></script>
+    <script src="../app/app_user.js"></script>
     
     <!-- Controllers -->
     <script src="../app/controllers/PollController.js"></script>
