Need to finish Poll service and controller

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -76,10 +76,12 @@
     <script src="../app/app.js"></script>
     
     <!-- Controllers -->
+    <script src="../app/controllers/PollsController.js"></script>
     <script src="../app/controllers/PollController.js"></script>
 
     <!-- Services -->
     <script src="../app/services/polls.js"></script>
+    <script src="../app/services/poll.js"></script>
     
 </body>
 </html>
