Added click controller for poll, and front end voting for anon users

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -3,7 +3,7 @@
 <head>
 <title>VoteGoat Voting App - by codemzy</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
 </head>
 <body ng-app="VoteGoatApp">
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="../img/votegoaticon.png"></a>
+            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
             <a class="navbar-brand">VoteGoat</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,15 +73,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Modules -->
-    <script src="../app/app_user.js"></script>
+    <script src="/public/app/app_user.js"></script>
     
     <!-- Controllers -->
-    <script src="../app/controllers/PollsController.js"></script>
-    <script src="../app/controllers/ProfileController.js"></script>
+    <script src="/public/app/controllers/PollsController.js"></script>
+    <script src="/public/app/controllers/ProfileController.js"></script>
 
     <!-- Services -->
-    <script src="../app/services/polls.js"></script>
-    <script src="../app/services/user.js"></script>
+    <script src="/public/app/services/polls.js"></script>
+    <script src="/public/app/services/user.js"></script>
     
 </body>
 </html>
