--- a/public/app/index.html
+++ b/public/app/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>VoteGoat Voting App - by codemzy</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
 </head>
 <body ng-app="VoteGoatApp">
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="../img/votegoaticon.png"></a>
+            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
             <a class="navbar-brand">VoteGoat</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -70,18 +70,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Modules -->
-    <script src="../app/app.js"></script>
+    <script src="/public/app/app.js"></script>
     
     <!-- Controllers -->
-    <script src="../app/controllers/PollsController.js"></script>
-    <script src="../app/controllers/PollController.js"></script>
+    <script src="/public/app/controllers/PollsController.js"></script>
+    <script src="/public/app/controllers/PollController.js"></script>
 
     <!-- Services -->
-    <script src="../app/services/polls.js"></script>
-    <script src="../app/services/poll.js"></script>
+    <script src="/public/app/services/polls.js"></script>
+    <script src="/public/app/services/poll.js"></script>
     
 </body>
 </html>
