--- a/public/app/index.html
+++ b/public/app/index.html
@@ -15,13 +15,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
+            <a class="navbar-brand" href="#/" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
             <a class="navbar-brand">VoteGoat</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="/api/polls">Polls</a></li>
             <li><a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a></li>
           </ul>
     
@@ -54,8 +53,8 @@
         </div>
         <div class="col-md-3 col-xs-6">
           <h3>Follow.</h3>
-          <p>Twitter<br>
-          GitHub<br>
+          <p><a href="https://www.twitter.com/codemzy" target="_blank"><i class="fa fa-twitter"></i> Twitter</a><br>
+          <a href="https://github.com/codemzy" target="_blank"><i class="fa fa-github"></i> GitHub</a><br>
           Portfolio<br><br></p>
         </div>
         <div class="col-md-6">
