--- a/public/app/index.html
+++ b/public/app/index.html
@@ -55,7 +55,7 @@
           <h3>Follow.</h3>
           <p><a href="https://www.twitter.com/codemzy" target="_blank"><i class="fa fa-twitter"></i> Twitter</a><br>
           <a href="https://github.com/codemzy" target="_blank"><i class="fa fa-github"></i> GitHub</a><br>
-          Portfolio<br><br></p>
+          <i class="fa fa-th"></i> Portfolio<br><br></p>
         </div>
         <div class="col-md-6">
           <h3>About.</h3>
