Poll view, controller and service added for authorised user

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -70,6 +70,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Modules -->
@@ -77,10 +78,12 @@
     
     <!-- Controllers -->
     <script src="/public/app/controllers/PollsController.js"></script>
+    <script src="/public/app/controllers/User_PollController.js"></script>
     <script src="/public/app/controllers/ProfileController.js"></script>
 
     <!-- Services -->
     <script src="/public/app/services/polls.js"></script>
+    <script src="/public/app/services/user_poll.js"></script>
     <script src="/public/app/services/user.js"></script>
     
 </body>
