Got post request sending form data to server

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -20,9 +20,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="/api/polls">Polls</a></li>
             <li><a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a></li>
+            <li><a href="#/"><i class="fa fa-star"></i>My Polls</a></li>
+            <li><a href="#/add/poll"><i class="fa fa-plus-square"></i> Add Poll</a></li>
           </ul>
     
           <ul class="nav navbar-nav navbar-right">
@@ -46,7 +46,7 @@
       <div class="container">
         <div class="col-md-3 col-xs-6">
           <h3>Navigate.</h3>
-          <p><a href="#/"><i class="fa fa-home"></i> Home</a><br>
+          <p><a href="#/add/poll"><i class="fa fa-plus-square"></i> Add Poll</a><br>
           <a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a><br>
           <a href="#/profile"><i class="fa fa-user"></i> Profile</a><br><br></p>
         </div>
@@ -77,11 +77,13 @@
     <!-- Controllers -->
     <script src="/public/app/controllers/PollsController.js"></script>
     <script src="/public/app/controllers/User_PollController.js"></script>
+    <script src="/public/app/controllers/User_AddPollController.js"></script>
     <script src="/public/app/controllers/ProfileController.js"></script>
 
     <!-- Services -->
     <script src="/public/app/services/polls.js"></script>
     <script src="/public/app/services/user_poll.js"></script>
+    <script src="/public/app/services/user_add.js"></script>
     <script src="/public/app/services/user.js"></script>
     
 </body>
