Backend added for user my polls

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a></li>
-            <li><a href="#/"><i class="fa fa-star"></i>My Polls</a></li>
+            <li><a href="#/polls/my"><i class="fa fa-star"></i> My Polls</a></li>
             <li><a href="#/add/poll"><i class="fa fa-plus-square"></i> Add Poll</a></li>
           </ul>
     
@@ -46,15 +46,16 @@
       <div class="container">
         <div class="col-md-3 col-xs-6">
           <h3>Navigate.</h3>
-          <p><a href="#/add/poll"><i class="fa fa-plus-square"></i> Add Poll</a><br>
-          <a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a><br>
+          <p><a href="#/polls"><i class="fa fa-bar-chart"></i> Polls</a><br>
+          <a href="#/polls/my"><i class="fa fa-star"></i> My Polls</a><br>
+          <a href="#/add/poll"><i class="fa fa-plus-square"></i> Add Poll</a><br>
           <a href="#/profile"><i class="fa fa-user"></i> Profile</a><br><br></p>
         </div>
         <div class="col-md-3 col-xs-6">
           <h3>Follow.</h3>
-          <p>Twitter<br>
-          GitHub<br>
-          Portfolio<br><br></p>
+          <p><a href="https://www.twitter.com/codemzy" target="_blank"><i class="fa fa-twitter"></i> Twitter</a><br>
+          <a href="https://github.com/codemzy" target="_blank"><i class="fa fa-github"></i> GitHub</a><br>
+          <i class="fa fa-th"></i> Portfolio<br><br></p>
         </div>
         <div class="col-md-6">
           <h3>About.</h3>
