Added my polls and logout button

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -79,6 +79,7 @@
     <script src="/public/app/controllers/PollsController.js"></script>
     <script src="/public/app/controllers/User_PollController.js"></script>
     <script src="/public/app/controllers/User_AddPollController.js"></script>
+    <script src="/public/app/controllers/User_MyPollsController.js"></script>
     <script src="/public/app/controllers/ProfileController.js"></script>
 
     <!-- Services -->
