Updated profile page and footers

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -58,7 +58,7 @@
         <div class="col-md-6">
           <h3>About.</h3>
           <p>Built by codemzy.</p>
-          <p>This is a RESTful app, built with MongoDB, Express, Angular and NodeJS (the MEAN stack).</p>
+          <p>This is a project by codemzy, built with MongoDB, Express, Angular and NodeJS (the MEAN stack).</p>
         </div>
       </div>
     </div>
