--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
+            <a class="navbar-brand" href="#/" id="brand-icon"><img alt="VOTEGOAT" src="/public/img/votegoaticon.png"></a>
             <a class="navbar-brand">VoteGoat</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
